--- a/src/spa/src/app/app.component.html
+++ b/src/spa/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="content bg-primary text-white">
-  <span>{{ title }} app is running!</span>
-</div>
+<db-top-bar></db-top-bar>
+<db-body></db-body>
+<db-footer></db-footer>
