Added CSS layout

--- a/src/spa/src/app/app.component.html
+++ b/src/spa/src/app/app.component.html
@@ -1,3 +1,5 @@
-<db-top-bar></db-top-bar>
-<db-body></db-body>
-<db-footer></db-footer>
+<div class="layout">
+  <db-top-bar></db-top-bar>
+  <db-body></db-body>
+  <db-footer></db-footer>
+</div>
