--- a/src/spa/src/styles/theme.scss
+++ b/src/spa/src/styles/theme.scss
@@ -1,1 +1,17 @@
 @import '~bootstrap/scss/bootstrap';
+
+html {
+  overflow: hidden;
+}
+
+body {
+  min-height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
+}
+
+db-root {
+  min-height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
+}
